--- a/sellsavvy/src/app/components/paged-table/paged-table.component.html
+++ b/sellsavvy/src/app/components/paged-table/paged-table.component.html
@@ -5,7 +5,9 @@
     <input matInput placeholder="Search products" />
   </mat-form-field>
 
-  <button mat-fab color="primary"><mat-icon>search</mat-icon></button>
+  <button mat-fab color="primary" class="search-button" (click)="onSearchButtonClick()">
+    <mat-icon>search</mat-icon>
+  </button>
 </div>
 
 }
