--- a/sellsavvy/src/app/forms/product-form/product-form.component.scss
+++ b/sellsavvy/src/app/forms/product-form/product-form.component.scss
@@ -1,42 +1,58 @@
-.form-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh; // Occupy the entire viewport height
-  min-height: 350px; // Minimum height for smaller content
-
-  .form {
-    width: 400px; // Adjust as needed
-    padding: 30px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-    border-radius: 6px;
-
-    mat-form-field {
-      width: 100%;
-      margin-bottom: 15px;
-    }
-
-    button[mat-raised-button] {
-      width: 100%;
-      background-color: #3f51b5; // Material indigo
-      color: white;
-    }
-
-    .button--disabled {
-      // Styling for the disabled button
-      background-color: gray;
-      opacity: 0.6;
-      cursor: default;
-    }
-  }
-}
-
 .spinner-container {
   display: flex;
-  flex-direction: column; // Arrange content vertically
-  align-items: center; // Horizontal centering
-  justify-content: center; // Vertical centering
-  height: 100vh; // Ensure the container takes full viewport height
-  min-height: 300px; // A minimum height in case content is smaller
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.message-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+}
+
+.form-container {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  background-color: #fff;
+}
+
+.full-width {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.half-width {
+  width: calc(50% - 10px);
+  margin-bottom: 20px;
+}
+
+.half-width:nth-child(odd) {
+  margin-right: 20px;
+}
+
+.submit-button {
+  align-self: flex-end;
+  margin-top: 20px;
+}
+
+@media (max-width: 768px) {
+  .half-width {
+    width: 100%;
+    margin-right: 0;
+  }
 }
