--- a/sellsavvy/src/app/pages/products-page/products-page.component.html
+++ b/sellsavvy/src/app/pages/products-page/products-page.component.html
@@ -1,4 +1,17 @@
-@if (canEdit) {
-    <button mat-raised-button color="primary" (click)="addProduct()">Add new product</button>
-}
-<paged-table [loggedInUser]="user" [products]="pagedproducts?.items" [canEdit]="canEdit"></paged-table>
+<div class="container">
+  @if (canEdit) {
+  <button
+    mat-raised-button
+    color="primary"
+    class="add-product-button"
+    (click)="addProduct()"
+  >
+    Add new product
+  </button>
+  }
+  <paged-table
+    [loggedInUser]="user"
+    [products]="pagedproducts?.items"
+    [canEdit]="canEdit"
+  ></paged-table>
+</div>
