--- a/sellsavvy/src/app/components/followers/followers.component.html
+++ b/sellsavvy/src/app/components/followers/followers.component.html
@@ -1,6 +1,6 @@
 <!-- src/app/followers/followers.component.html -->
 <div fxLayout="column" fxLayoutAlign="start stretch">
-  <mat-card *ngFor="let follower of followers" class="follower-card">
+  <mat-card *ngFor="let follower of followers" class="follower-card" (click)="viewProfile(follower.id)">
     <mat-card-header>
       <div
         mat-card-avatar
@@ -9,10 +9,7 @@
           'background-image': 'url(' + follower.profilePicture + ')'
         }"
       ></div>
-      <mat-card-title>{{ follower.name }}</mat-card-title>
-      <mat-card-subtitle
-        >{{ follower.postedProducts }} Products</mat-card-subtitle
-      >
+      <mat-card-title>{{ follower.firstName }} {{follower.lastName}}</mat-card-title>
     </mat-card-header>
   </mat-card>
 </div>
