--- a/sellsavvy/src/app/pages/products-page/products-page.component.html
+++ b/sellsavvy/src/app/pages/products-page/products-page.component.html
@@ -14,4 +14,14 @@
     [products]="pagedproducts?.items"
     [canEdit]="canEdit"
   ></paged-table>
+
+  <div class="paginator-container">
+    <mat-paginator
+      [length]="pagedproducts?.metadata?.totalCount"
+      [pageSize]="pageSize"
+      [pageSizeOptions]="[5, 10, 20]"
+      (page)="onPageChange($event)"
+    >
+    </mat-paginator>
+  </div>
 </div>
