--- a/sellsavvy/src/app/components/product-card/product-card.component.html
+++ b/sellsavvy/src/app/components/product-card/product-card.component.html
@@ -3,15 +3,15 @@
     <h2>{{ product.title | truncate : 20 }}</h2>
     <img
       mat-card-image
-      src="https://picsum.photos/id/1005/200/150"
+      [src]="imgSrc"
       alt="Product Photo"
     />
     <p class="description">{{ product.description | truncate : 50 }}</p>
     <span class="price">{{ product.price }} RON</span>
     <div class="button-container">
       @if (!canEdit) {
-      <button mat-raised-button color="primary" (click)="addToCart()">
-        Add to Cart
+      <button mat-raised-button color="primary" [disabled]="isAddedToCart" (click)="addToCart()">
+        {{isAddedToCart ? 'Added to Cart' : 'Add to Cart'}}
       </button>
       } @else {
       <button mat-raised-button color="primary" (click)="editProduct()">
