--- a/sellsavvy/src/app/components/product-card/product-card.component.scss
+++ b/sellsavvy/src/app/components/product-card/product-card.component.scss
@@ -1,17 +1,17 @@
-// .product-card {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-between;
-//   align-items: center;
-//   padding: 20px;
-//   background-color: #fff;
-//   border-radius: 10px;
-//   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-//   transition: transform 0.3s;
-//   margin: 10px;
-//   width: 350px;
-//   height: 400px;
-// }
+.product-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s;
+  margin: 30px;
+  width: 300px;
+  height: 400px;
+}
 
 // .product-card:hover {
 //   transform: translateY(-5px);
