--- a/sellsavvy/src/app/components/product-card/product-card.component.scss
+++ b/sellsavvy/src/app/components/product-card/product-card.component.scss
@@ -31,18 +31,18 @@
 //   height: auto;
 //   border-radius: 10px;
 //   margin-bottom: 10px;
-//   display: block; /* Ensure the image is displayed as a block element */
+//   display: block; 
 // }
 
 // .product-card .description {
 //   font-size: 1rem;
 //   text-align: center;
 //   margin-bottom: 10px;
-//   height: 60px; /* Adjust based on your needs */
+//   height: 60px;
 //   overflow: hidden;
 //   text-overflow: ellipsis;
 //   display: -webkit-box;
-//   -webkit-line-clamp: 3; /* Number of lines to show */
+//   -webkit-line-clamp: 3; 
 //   -webkit-box-orient: vertical;
 // }
 
@@ -79,12 +79,12 @@
 //   .product-card img {
 //     width: 200px;
 //     height: 150px;
-//     margin: 0 auto 20px; /* Center the image horizontally */
+//     margin: 0 auto 20px;
 //   }
 
 //   .product-card .description {
 //     font-size: 1.125rem;
-//     height: auto; /* Adjust based on your needs */
+//     height: auto;
 //   }
 
 //   .product-card .price {
