--- a/sellsavvy/src/app/pages/unauthorized-page/unauthorized-page.component.scss
+++ b/sellsavvy/src/app/pages/unauthorized-page/unauthorized-page.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 300px; // Adjust for screen size
+  min-height: 300px;
   text-align: center;
   padding: 20px;
 
