--- a/sellsavvy/src/app/components/fail-card/fail-card.component.scss
+++ b/sellsavvy/src/app/components/fail-card/fail-card.component.scss
@@ -1,23 +1,21 @@
 .error-card {
-    background-color: #fde0e3; // Soft green background
-    color: #b00020; // Dark green text
+    background-color: #fde0e3;
+    color: #b00020;
     padding: 20px;
     border-radius: 8px;
     text-align: center;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    // Rectangular shape
-    width: 350px; // Adjust the width as needed
-    margin: 25px auto; // Automatic left & right margins for horizontal centering
+    width: 350px;
+    margin: 25px auto;
   
-    // Centering within the page
     display: flex;
-    flex-direction: column; // Arrange content vertically
-    align-items: center; // Horizontal centering
-    justify-content: center; // Vertical centering
-    position: absolute; // Required for absolute positioning
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); // Technique to perfectly center
+    transform: translate(-50%, -50%);
   
     .error-icon {
       font-size: 48px;
