--- a/sellsavvy/src/app/components/success-card/success-card.component.scss
+++ b/sellsavvy/src/app/components/success-card/success-card.component.scss
@@ -1,23 +1,20 @@
 .success-card {
-  background-color: #e8f5e9; // Soft green background
-  color: #2e7d32; // Dark green text
+  background-color: #e8f5e9;
+  color: #2e7d32;
   padding: 20px;
   border-radius: 8px;
   text-align: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  // Rectangular shape
-  width: 350px; // Adjust the width as needed
-  margin: 25px auto; // Automatic left & right margins for horizontal centering
-
-  // Centering within the page
+  width: 350px;
+  margin: 25px auto;
   display: flex;
-  flex-direction: column; // Arrange content vertically
-  align-items: center; // Horizontal centering
-  justify-content: center; // Vertical centering
-  position: absolute; // Required for absolute positioning
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); // Technique to perfectly center
+  transform: translate(-50%, -50%);
 
   .success-icon {
     font-size: 48px;
