--- a/sellsavvy/src/app/forms/register/register.component.scss
+++ b/sellsavvy/src/app/forms/register/register.component.scss
@@ -3,12 +3,12 @@
   flex-direction: column;
   gap: 15px;
   width: 80%; 
-  max-width: 500px;      // Maintain a maximum width for readability
-  margin: 40px auto;     // Center the card horizontally
+  max-width: 500px;
+  margin: 40px auto;
   padding: 30px;
-  background-color: white; // White background
-  border: 1px solid #ddd; // Subtle border (optional)
-  border-radius: 8px;       // Rounded corners
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 8px;
 
   mat-form-field {
     width: 100%; 
@@ -31,16 +31,16 @@
 
   .button--disabled {
     background-color: gray; 
-    opacity: 0.6;     // Slightly faded when disabled
-    cursor: default;  // Indicate non-clickable state
+    opacity: 0.6;
+    cursor: default;
   }
 }
 
 .spinner-container {
   display: flex;
-  flex-direction: column; // Arrange content vertically
-  align-items: center; // Horizontal centering
-  justify-content: center; // Vertical centering
-  height: 100vh; // Ensure the container takes full viewport height
-  min-height: 300px; // A minimum height in case content is smaller
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  min-height: 300px;
 }
